--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "args": [
                 "full-iot-term-list.yaml",
-                "customer-facing"
+                "dump-all"
             ]
         }
     ]
